	a footer.

	* twittering-mode.el: Add a new function
	`twittering-render-replied-statuses'.
	(twittering-render-replied-statuses): new function, which renders
	replied statuses even if some replied statuses have been already
	rendered.
	(twittering-show-replied-statuses): reimplemented with the new
	function `twittering-render-replied-statuses'.

2012-03-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the escape of a query string in a search
	timeline spec.
	(twittering-timeline-spec-to-string): correctly escape a query of
	a search timeline spec.
	(twittering-extract-timeline-spec): correctly decode a query
	string with escaped characters.
	* test/test-twittering-mode.el: Add tests for search timeline
	specs.

	* twittering-mode.el: Support ":exclude-re/REGEXP/SPEC"
	timelines.
	(twittering-timeline-spec-to-string): support the new timeline
	spec ":exclude-re/REGEXP/SPEC".
	(twittering-extract-timeline-spec): likewise.
	(twittering-timeline-spec-composite-p): likewise.
	(twittering-get-base-timeline-specs): likewise.
	(twittering-generate-composite-timeline): likewise.
	(twittering-current-timeline-referring-id-table): likewise.
	(twittering-current-timeline-data): likewise.
	* test/test-twittering-mode.el: Add tests for exclude-re timeline
	specs.

2012-02-28  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the function
	`twittering-current-timeline-referring-id-table'. There was the
	possibility that the function returns nil for a composite timeline
	spec. This made native retweets disappear on the composite
	timeline. Thanks to Boots_of_Lead who reported the bug.
	(twittering-current-timeline-referring-id-table): for a composite
	timeline spec, return the table of the first primary base spec
	with a non-nil referring table. This function previously returned
	the first direct base timeline spec, which might be nil.

	* twittering-mode.el: Add an explanation to the docstring of
	`twittering-new-tweets-rendered-hook'.